first Activity Maker Version

--- a/package.json
+++ b/package.json
@@ -145,6 +145,8 @@
     "intl": "^1.2.5",
     "rxjs": "~5.2.0",
     "systemjs": "0.19.41",
-    "zone.js": "^0.7.2"
+    "zone.js": "^0.7.2",
+    "jquery": "1.12.4",
+    "jquery-ui" : "1.12.1"
   }
 }
